--- a/.env
+++ b/.env
@@ -12,8 +12,9 @@ APP_SECRET=EDITME
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For a sqlite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
-DATABASE_URL=mysql://root@127.0.0.1/sylius_%kernel.environment%
-###< doctrine/doctrine-bundle ###
+DATABASE_URL=mysql://root:morele@mysql:3306/sylius_%kernel.environment%
+###< doctrine/doctrine-bundle ###\
+
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
